noinst_LIBRARIES = liburiparser.a

liburiparser_a_SOURCES = UriCommon.c UriCompare.c \
	UriEscape.c UriFile.c UriIp4.c \
	UriIp4Base.c UriNormalize.c \
	UriNormalizeBase.c UriParse.c \
	UriParseBase.c UriQuery.c \
	UriRecompose.c UriResolve.c \
	UriShorten.c

liburiparser_a_CFLAGS = $(AM_CFLAGS) -I..
